--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script src="https://d3js.org/d3.v6.js"></script>
 		%sveltekit.head%
+		<script type="text/javascript" async
+			src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+		</script>
+		<script type="text/x-mathjax-config">
+			MathJax.Hub.Config({
+			tex2jax: {inlineMath: [['$', '$'], ['\\(', '\\)']]}
+			});
+		</script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
